# real_state

./: .amplifyignore  .env.example  .env.local  .gitignore  .nexignore  .project.rules  GeoDjango.md  Makefile  README.md  amplify.yml  bugsink-docker-compose.yml  bugsink.txt  bun.lockb  docker-compose.yml  dump.rdb  hoyhub.sql  mcadminploci.txt  message.txt  middleware.ts  minio-django-policy.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  project-core.md  project_report.md  sasapay.txt  sentry.server.config.js  temp.sql  weasyprint-installation.md
lib/: auth.ts  (+8 more)
server/: celery_app.py  check_production_logs.py  check_server_logs.py  clear_kyc_simple.py  monitor_auth_logs.py  pyproject.toml  requirements.txt  test.py  test_contract_end_fix.py  test_kyc_serialization.py  test_signal.py
server/HoyHub/: Payout Callback 2.bru  bruno 2.json  collection.bru
server/accounts/: consumers.py  middleware.py  models 2.py  models.py  routes 2.py  routing.py  serializers.py  test_consumer 2.py  utils.py  views.py
server/company/: models.py  routes.py  serializers.py  views 2.py
server/dashboard/: serializers.py  urls.py  views.py
server/documents/: admin.py  apps.py  models.py  routes.py  serialzier.py  signals 2.py  views.py
server/menupermissions/: apps 2.py  models 2.py
server/otp/: models 2.py  routes 2.py  serializers.py  views 2.py
server/payments/: admin 2.py  apps.py  currency.py  expense.py  invoice 2.py  invoice.py  models.py  payment 2.py  payment.py  routes 2.py  scheduler.py  serializer 2.py  signals 2.py  task_settings.py  tasks 2.py  transaction_upload.py  vendor 2.py
server/properties/: basement 2.py  clients 2.py  clients.py  maintenance.py  models.py  payment 2.py  project_service_routes 2.py  project_service_view.py  projects 2.py  routes.py  routes_backup.py  sample 2.py  service_routes 2.py  service_view.py  structure.py  structure_backup.py  tenant.py  tests 2.py  verification.py  views_property_tenant.py
(+1042 files in other folders)
